--- a/Index.html
+++ b/Index.html
@@ -75,6 +75,13 @@
                     <h4>C#</h4>
                     <p class="experience-level">Beginner</p>
                 </div>
+                <div class="col-md-4 skill-item">
+                    <div class="skill-icon">
+                        <i class="fab fa-js"></i>
+                    </div>
+                    <h4>JavaScript</h4>
+                    <p class="experience-level">Intermediate</p>
+                </div>
             </div>
         </div>
     </div>
@@ -85,13 +92,13 @@
             <div class="row">
                 <div class="col-md-4 project-item">
                     <h4>King Salman Park</h4>
-                    <p>Developed a simulation tool in Java as part of a team to streamline activity planning and booking at King Salman Park...</p>
-                    <a href="https://github.com/Naser-code/KingSalmanPark" class="btn btn-primary" target="_blank">View Project</a>
+                    <p>Developed a simulation tool in Java as part of a team to streamline activity planning and booking at King Salman Park. The tool efficiently managed visitor data using an ordered circular linked list, allowed booking and scheduling of various park attractions, computed total earnings, and featured a command-based interface for user interactions. This project honed my skills in Java programming, data structures, and backend development.</p>
+                    <a href="https://github.com/Naser-code/King-Salman-Park" class="btn btn-primary" target="_blank">View Project</a>
                 </div>
                 <div class="col-md-4 project-item">
-                    <h4>Project 2</h4>
-                    <p>Description of Project 2...</p>
-                    <a href="https://link-to-project2.com" class="btn btn-primary" target="_blank">View Project</a>
+                    <h4>Simon Game</h4>
+                    <p>Created a Simon Game using JavaScript, CSS, HTML, and jQuery. The game replicates the classic memory game where players must remember and repeat a sequence of lights and sounds. This project enhanced my skills in front-end web development and working with jQuery for DOM manipulation.</p>
+                    <a href="https://github.com/Naser-code/Simon-Game" class="btn btn-primary" target="_blank">View Project</a>
                 </div>
                 <div class="col-md-4 project-item">
                     <h4>Project 3</h4>
